configure postcss imports

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,3 +1,6 @@
+@import 'styles/variables';
+
 .test {
-  font-size: 2rem;
+  composes: userselect-none from 'styles/box.css';
+  font-size: $test-font-size;
 }
