add some header layout

--- a/src/views/main/main.css
+++ b/src/views/main/main.css
@@ -1,5 +1,9 @@
 @import 'styles/variables';
 
+.shape-viewer {
+  width: 100%;
+}
+
 .test {
   composes: userselect-none from 'styles/box.css';
   font-size: $test-font-size;
